--- a/src/locales/hu/messages.json
+++ b/src/locales/hu/messages.json
@@ -50,6 +50,10 @@
       "title": "Nincs megjeleníthető részvény",
       "description": "Próbáld meg módosítani a szűrőket"
     },
+    "views": {
+      "basicInfos": "Alapinfók",
+      "priceChanges": "Árváltozások"
+    },
     "columns": {
       "ticker": "Ticker",
       "name": "Név",
@@ -61,6 +65,8 @@
       "difference": "Változás (%)",
       "priceTarget12m": "12 hónapos cél",
       "created": "Létrehozva",
+      "highestPrice": "Max ár",
+      "maxPriceChange": "Max változás (%)",
       "actions": "Műveletek"
     },
     "actions": {
